--- a/index.css
+++ b/index.css
@@ -1,11 +1,45 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #top-bar {
   display: flex;
   justify-content: space-between;
+  padding: 5px 0;
+  margin: 0;
+  line-height: 38px;
+  background-color: rgb(70, 70, 206);
+  box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
-#side-icons {
-  display: flex;
-  justify-content: space-between;
+#top-bar img {
+  width: 100px;
+  height: 55px;
+  padding: 0 10px;
+  margin-left: 2px;
+  border-radius: 10px;
+}
+
+#side-elements {
+  margin-right: 22px;
+}
+
+#side-elements ul {
+  padding: 0;
+  margin: 0;
+}
+
+#side-elements li {
+  display: inline;
+  list-style: none;
+  line-height: 53px;
+  margin-left: 14px;
+  color: white;
+}
+
+#side-elements li:hover {
+  cursor: pointer;
 }
 
 h1 {
