--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
+  background-image: url("images/job-bk4.avif");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #top-bar {
@@ -9,7 +13,7 @@ body {
   padding: 5px 0;
   margin: 0;
   line-height: 38px;
-  background-color: rgb(70, 70, 206);
+  background-color: #134165;
   box-shadow: 2px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
@@ -34,6 +38,7 @@ body {
   display: inline;
   list-style: none;
   line-height: 53px;
+  font-size: 14px;
   margin-left: 14px;
   color: white;
 }
@@ -44,7 +49,17 @@ body {
 
 h1 {
   text-align: center;
-  margin-top: 105px;
+  margin-top: 195px;
+  font-size: 44px;
+  color: #134165;
+}
+
+h4 {
+  margin: 0;
+  line-height: 53px;
+  font-size: 20px;
+  margin-left: 10px;
+  color: whitesmoke;
 }
 
 form {
