--- a/index.css
+++ b/index.css
@@ -63,15 +63,18 @@ h4 {
   color: whitesmoke;
 }
 
+.box {
+  margin-inline: 200px;
+  border-radius: 10px;
+}
+
 form {
   text-align: center;
   padding: 10px 30px;
   margin: 15px 0;
   border-radius: 10px;
-  background-color: whitesmoke;
   display: flex;
   justify-content: space-evenly;
-  margin-inline: 200px;
 }
 
 .search-bar {
@@ -89,17 +92,30 @@ form {
   background: #134165;
   color: whitesmoke;
   border: none;
-  border-radius: 15px;
+  border-radius: 30px;
   padding: 14px 24px;
+}
+
+.submit-btn:hover {
+  cursor: pointer;
 }
 
 .results {
   font-size: 14px;
   background-color: whitesmoke;
+  opacity: 0.8;
   padding: 20px;
   line-height: 2;
   border-left: 3px solid #134165;
   border-radius: 10px;
   box-shadow: 0 4px 30px 0 rgba(39, 33, 66, 0.2);
   margin-inline: 200px;
+}
+
+.hidden {
+  display: none;
+}
+
+.job-results {
+  color: #134165;
 }
